# netris

./: CMakeLists.txt
src/: main.c
